Fix: scroll on mobile menu

--- a/app/assets/stylesheets/admin/base.sass
+++ b/app/assets/stylesheets/admin/base.sass
@@ -49,6 +49,7 @@
 
 #sidebar
   position: fixed
+  overflow-y: scroll
   display: flex
   flex-direction: column
   top: 0
